tests/ui/attributes/unsafe/unsafe-safe-attribute_diagnostic.stderr
error: unnecessary `unsafe` on safe attribute
  --> $DIR/unsafe-safe-attribute_diagnostic.rs:1:3
   |
LL | #[unsafe(diagnostic::on_unimplemented(
   |   ^^^^^^

error: aborting due to 1 previous error

