tests/ui/attributes/unsafe/unsafe-safe-attribute_diagnostic.rs
#[unsafe(diagnostic::on_unimplemented( //~ ERROR: unnecessary `unsafe`
    message = "testing",
))]
trait Foo {}

fn main() {}
